--- a/src/index_.scss
+++ b/src/index_.scss
@@ -19,7 +19,15 @@ $btn_default_color: #229DD2;
 
 
 .content-wrapper {
-    padding-right: 85px;;
+    padding: 0 80px 0 40px;
+}
+
+.product-page-title {
+    text-transform: uppercase;
+    color: #1d7595;
+    font-size: 30px;
+    text-align: left;
+    font-weight: bold;
 }
 
 .products-toolbar {
@@ -267,7 +275,8 @@ $btn_default_color: #229DD2;
     display: flex;
     min-width: 125px;
     max-height: 400px;
-    margin: 5px;
+    margin-right: 25px;
+    margin-bottom: 25px;
     border: 1px solid #afafaf83;
     border-radius: 10px;
     
@@ -1267,6 +1276,11 @@ $btn_default_color: #229DD2;
 }
 
 @media screen and(max-width: 767px) {
+    .product-page-title {
+        text-align: center;
+        padding: 5px 30px;
+    }
+    
     .products-toolbar {
         flex-flow: row wrap;
         justify-content: space-between;
