--- a/src/index_.scss
+++ b/src/index_.scss
@@ -19,7 +19,9 @@ $btn_default_color: #229DD2;
 
 
 .content-wrapper {
-    padding: 0 80px 0 40px;
+    padding: 0 3% 0 30px;
+    display: flex;
+    flex-direction: row;
 }
 
 .product-page-title {
@@ -173,8 +175,6 @@ $btn_default_color: #229DD2;
     }
 }
 
-
-
 .sub-categories-select {
     position: relative;
     
@@ -270,12 +270,19 @@ $btn_default_color: #229DD2;
     }
 }
 
+.products-wrapper {
+    margin-top: 25px;
+    margin-right: -20px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
 .product-card {
     position: relative;
     display: flex;
     min-width: 125px;
     max-height: 400px;
-    margin-right: 25px;
     margin-bottom: 25px;
     border: 1px solid #afafaf83;
     border-radius: 10px;
@@ -283,6 +290,7 @@ $btn_default_color: #229DD2;
 
     &_tile {
         width: 260px;
+        margin-right: 22px;
         flex-direction: column;
         justify-content: space-between;
     }
@@ -516,7 +524,7 @@ $btn_default_color: #229DD2;
     }
 
 }
-@media screen and(max-width: 600px) {
+@media screen and(max-width: 767px) {
     .product-card_tile {
         width: 45%;
     }
@@ -1260,6 +1268,17 @@ $btn_default_color: #229DD2;
 
 
 @media screen and(max-width: 1140px) {
+    .content-wrapper {
+        padding-right: 20px;
+    }
+    .products-wrapper {
+        justify-content: space-around;
+    }
+
+    .product-card_tile {
+        margin-right: 10px;
+    }
+
     .footer {
         flex-direction: column;
 
@@ -1276,6 +1295,11 @@ $btn_default_color: #229DD2;
 }
 
 @media screen and(max-width: 767px) {
+    .content-wrapper {
+        max-width: 100%;
+        padding: 0 3%;
+    }
+
     .product-page-title {
         text-align: center;
         padding: 5px 30px;
