--- a/src/index.scss
+++ b/src/index.scss
@@ -812,7 +812,7 @@ h3 > a {
 }
 
 .change-data {
-  width: 50%;
+  width: 100%;
   max-width: 700px;
 
   & form {
@@ -891,8 +891,7 @@ h3 > a {
 
 .basket-amount {
   width: 100%;
-  padding: 30px;
-  margin-left: 20px;
+  padding: 30px 0 30px 0;
   border-radius: 10px;
   border: none;
   background-color: #f8f7f6;
@@ -1924,6 +1923,9 @@ h3 > a {
   text-transform: uppercase;
   vertical-align: middle;
   outline: none;
+  & p {
+    font-size: 10px;
+  }
 
   &:active {
     outline: none;
@@ -2017,14 +2019,22 @@ h3 > a {
   top: 100%;
   left: 0;
   z-index: 21;
-  max-width: 400px;
+  width: 19%;
+  min-width: 340px;
+  padding-left: 12%;
   max-height: 2000px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
 
   & .list {
     overflow: hidden;
     max-height: 2000px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
+    width: 100%;
   }
 
   & .small-list {
@@ -2032,6 +2042,7 @@ h3 > a {
     max-height: 500px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
+    width: 100%;
   }
 
 
