--- a/src/index.scss
+++ b/src/index.scss
@@ -123,8 +123,7 @@ h3 > a {
 
 .contacts {
   width: 95%;
-  padding-bottom: 40px;
-
+  max-width: 100%;
 
   & .about-text {
     text-align: left;
@@ -377,7 +376,7 @@ h3 > a {
   height: 100%;
   width: 100%;
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     background: #ffffff;
   }
 }
@@ -390,7 +389,7 @@ h3 > a {
   font-weight: bold;
   color: $color_primary;
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     text-align: center;
     margin: 10px 0 10px 0;
@@ -398,8 +397,8 @@ h3 > a {
 }
 
 .change-password {
-  width: 50%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 800px;
 
   & form {
     width: 100%;
@@ -441,8 +440,7 @@ h3 > a {
     padding-top: 15px;
   }
 
-  @media screen and (max-width: 1000px) {
-    width: 100%;
+  @media screen and (max-width: 768px) {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -500,6 +498,7 @@ h3 > a {
     display: flex;
     padding: 10px 0 10px 0;
     align-items: center;
+    background-color: #fff;
   }
 
   .login-form-button {
@@ -540,7 +539,7 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -646,7 +645,7 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -758,7 +757,7 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -858,9 +857,8 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
-    max-width: 1000px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -961,7 +959,7 @@ h3 > a {
   }
 
   & .counter {
-    width: 10%;
+    width: 15%;
     max-width: 150px;
     display: flex;
     flex-direction: row;
@@ -973,7 +971,7 @@ h3 > a {
     & input {
       color: $color_label;
       text-align: center;
-      width: 20%;
+      width: 50%;
       margin: 0;
       border: none;
       outline: none;
@@ -1035,7 +1033,11 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
+
+    & h4 {
+      text-align: center;
+    }
 
     & .product-card-top {
       display: flex;
@@ -1081,6 +1083,10 @@ h3 > a {
       flex-direction: row;
       justify-content: space-between;
       color: $color_label;
+
+      & input {
+        width: 50%;
+      }
     }
 
 
@@ -1224,7 +1230,7 @@ h3 > a {
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: 100%;
     max-width: 1000px;
     display: flex;
@@ -1316,69 +1322,85 @@ h3 > a {
 }
 
 .layout {
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     padding: 0;
   }
 }
-
-.orders-label {
-  font-size: 40px;
-  padding-bottom: 20px;
-  text-align: left;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: $color_secondary;
-}
-
-.orders-headers-container {
+.orders {
   width: 100%;
-  background-color: #f1f1f1;
-  border-radius: 10px;
-  display: flex;
-  padding: 10px;
-
-  & div {
+  .orders-label {
+    font-size: 40px;
+    padding-bottom: 20px;
     text-align: left;
-    color: $color_label;
     font-weight: bold;
-    display: flex;
+    text-transform: uppercase;
+    color: $color_secondary;
+  }
+
+  .orders-headers-container {
     width: 100%;
-    align-items: center;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    display: flex;
+    padding: 10px;
 
-    & p {
-      margin: 0;
+    & div {
+      text-align: left;
+      color: $color_label;
+      font-weight: bold;
+      display: flex;
+      width: 100%;
+      align-items: center;
+
+      & p {
+        margin: 0;
+      }
     }
-  }
 
-  & .orders-header-number {
-    width: 15%;
-  }
-
-  & .orders-header-date {
-    width: 75%;
-  }
-
-  & .orders-header-sum {
-    width: 10%;
-  }
-
-  @media screen and (max-width: 1000px) {
-
-    margin: 0;
-    border-radius: 0;
     & .orders-header-number {
-      width: 33%;
+      width: 15%;
     }
 
     & .orders-header-date {
-      width: 33%;
-      text-align: center;
+      width: 75%;
     }
 
     & .orders-header-sum {
-      width: 33%;
-      text-align: right;
+      width: 10%;
     }
+
+  }
+
+  @media screen and (max-width: 768px) {
+
+    & .orders-label {
+      text-align: center;
+    }
+
+    & .orders-headers-container {
+
+      width: 100%;
+
+      margin: 0;
+      border-radius: 0;
+      & .orders-label {
+        text-align: center;
+      }
+      & .orders-header-number {
+        width: 33%;
+      }
+
+      & .orders-header-date {
+        width: 33%;
+        text-align: center;
+      }
+
+      & .orders-header-sum {
+        width: 33%;
+        text-align: right;
+      }
+    }
+
   }
 }
 
@@ -1394,7 +1416,7 @@ h3 > a {
 
   .favorite-body {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     flex-grow: 1;
@@ -1418,6 +1440,8 @@ h3 > a {
         width: 45%;
         margin: 0;
         padding: 0;
+        display: flex;
+        justify-content: center;
       }
     }
   }
@@ -1425,7 +1449,6 @@ h3 > a {
 
 .orders-body-container {
   width: 100%;
-  height: 120%;
 
   & .container-header {
     border-radius: 10px;
@@ -1528,7 +1551,7 @@ h3 > a {
             }
           }
 
-          @media screen and (max-width: 1000px) {
+          @media screen and (max-width: 768px) {
             max-height: 500px;
             display: flex;
             flex-direction: column;
@@ -1610,7 +1633,7 @@ h3 > a {
     width: 10%;
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     & .orders-item-number {
       width: 33%;
     }
@@ -1633,14 +1656,14 @@ h3 > a {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 
 
   .card-container {
     margin: 20px;
     height: 450px;
     overflow: hidden;
-    width: 450px;
+    max-width: 470px;
     border-radius: 10px;
 
     &:hover {
@@ -1715,6 +1738,10 @@ h3 > a {
       &:hover {
         background-color: #f1f1f1;
       }
+    }
+
+    & .number-pages-container.minimal {
+      width: 30%;
     }
 
     & .number-pages-container {
@@ -1945,7 +1972,7 @@ h3 > a {
     vertical-align: middle;
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     width: auto;
     display: flex;
     align-items: center;
@@ -1961,6 +1988,13 @@ h3 > a {
   padding: 0 5px 0 15px;
   margin: 0;
   display: flex;
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active  {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+  }
 
   & span {
     font-weight: 900;
@@ -1985,7 +2019,7 @@ h3 > a {
   }
 
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
     & input {
       text-align: center;
     }
@@ -1995,8 +2029,7 @@ h3 > a {
 .show-all {
   color: grey;
   width: 100%;
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 10px 0 10px 0;
   background-color: #f2f2f2;
   border: none;
   border-radius: 0 0 10px 10px;
@@ -2004,6 +2037,9 @@ h3 > a {
   font-weight: bold;
   color: gray;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:active {
     background-color: #e9e9e9;
@@ -2029,8 +2065,7 @@ h3 > a {
   font-size: 14px;
   display: flex;
   flex-direction: column;
-
-
+  padding-bottom: 60px;
 
   & .list {
     overflow: hidden;
@@ -2042,7 +2077,7 @@ h3 > a {
 
   & .small-list {
     overflow: hidden;
-    max-height: 500px;
+    max-height: 675px;
     padding-right: 0;
     transition: max-height 1.3s ease-in-out;
     width: 100%;
@@ -2259,9 +2294,6 @@ div {
 }
 
 .workshop-list-container {
-
-  padding-bottom: 50px;
-
   & h4 {
     color: $color_secondary;
     text-align: left;
@@ -2305,8 +2337,15 @@ div {
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       }
     }
+  }
 
-    @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 768px) {
+
+    & h4 {
+      text-align: center;
+    }
+
+    & .workshop-list-body {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -2337,6 +2376,7 @@ div {
         }
       }
     }
+
   }
 
 }
@@ -2351,7 +2391,7 @@ div {
     margin-bottom: 20px;
 
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 768px) {
       text-align: center;
     }
   }
@@ -2408,7 +2448,7 @@ div {
     }
 
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 768px) {
       display: flex;
       flex-direction: column;
       width: 100%;
@@ -2462,7 +2502,7 @@ div {
         object-fit: contain;
       }
 
-      @media screen and (max-width: 1000px) {
+      @media screen and (max-width: 768px) {
         text-align: center;
 
         & h4 {
@@ -2500,7 +2540,7 @@ div {
   }
 
 
-  @media screen and (max-width: 1000px) and (min-width: 700px) {
+  @media screen and (max-width: 1000px) and (min-width: 768px) {
     & .materials-body {
       display: flex;
       align-items: center;
@@ -2520,7 +2560,7 @@ div {
     }
   }
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 768px) {
 
     & .materials-body {
       display: flex;
@@ -2549,7 +2589,7 @@ div {
     & img {
       padding: 10px;
 
-      @media screen and (max-width: 1000px) {
+      @media screen and (max-width: 768px) {
         max-width: 90%;
       }
     }
@@ -2611,7 +2651,7 @@ div {
       }
     }
 
-    @media screen and (max-width: 1000px) and (min-width: 700px) {
+    @media screen and (max-width: 1000px) and (min-width: 768px) {
 
       & .size-header {
         width: 100%;
@@ -2649,7 +2689,7 @@ div {
       }
     }
 
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 768px) {
 
       & h4 {
         width: 100%;
@@ -3231,6 +3271,21 @@ nav.navbar {
   & u {
     font-size: 14px;
     color: #259dd1;
+  }
+}
+
+.breadcrumb-custom-styles {
+
+  & .breadcrumb-item {
+    & a {
+      color: $color_label;
+      text-decoration: underline;
+    }
+  }
+
+
+  @media screen and (max-width: 768px ){
+    justify-content: center;
   }
 }
 
