--- a/src/index.scss
+++ b/src/index.scss
@@ -374,6 +374,7 @@ h3 > a {
   background-size: contain;
 
   height: 100%;
+  max-height: 700px;
   width: 100%;
 
   @media screen and (max-width: 768px) {
@@ -486,7 +487,8 @@ h3 > a {
 }
 
 .login {
-  width: 50%;
+  width: 100%;
+  max-width: 600px;
   text-align: left;
 
 
@@ -541,6 +543,7 @@ h3 > a {
 
   @media screen and (max-width: 768px) {
     width: 100%;
+    max-width: 768px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -594,8 +597,8 @@ h3 > a {
 }
 
 .reset {
-  width: 50%;
-  max-width: 700px;
+  width: 100%;
+  max-width: 750px;
 
   & form {
     width: 100%;
@@ -700,7 +703,7 @@ h3 > a {
 }
 
 .register {
-  width: 50%;
+  width: 100%;
   max-width: 700px;
 
   & form {
@@ -900,6 +903,11 @@ h3 > a {
   background-color: #f8f7f6;
   text-transform: uppercase;
   font-weight: bold;
+
+  & .basket-btn {
+    width: auto;
+    min-width: 100px;
+  }
 
   & span {
     font-size: 20px;
@@ -1362,11 +1370,11 @@ h3 > a {
     }
 
     & .orders-header-date {
-      width: 75%;
+      width: 70%;
     }
 
     & .orders-header-sum {
-      width: 10%;
+      width: 15%;
     }
 
   }
@@ -1404,6 +1412,8 @@ h3 > a {
   }
 }
 
+
+
 .favorite {
 
   & h4 {
@@ -1425,6 +1435,8 @@ h3 > a {
       display: flex;
     }
   }
+
+
 
   @media screen and (max-width: 768px) {
     & h4 {
@@ -1466,6 +1478,10 @@ h3 > a {
       display: flex;
       width: 100%;
       align-items: center;
+
+      & p {
+        font-size: 14px;
+      }
     }
 
     & .items {
@@ -1500,13 +1516,14 @@ h3 > a {
 
 
           & .order-detail-top {
-            width: 70%;
+            width: 60%;
             display: flex;
             align-items: center;
+            justify-content: space-between;
 
             & .order-image {
               text-align: center;
-              width: 20%;
+              width: 30%;
               max-height: 90%;
 
               & img {
@@ -1516,7 +1533,7 @@ h3 > a {
             }
 
             & .order-title {
-              width: 80%;
+              width: 60%;
 
               & .art {
                 color: $color_label;
@@ -1524,19 +1541,22 @@ h3 > a {
 
               & p {
                 margin-bottom: 10px;
+                font-size: 14px;
               }
             }
           }
 
           & .order-detail-bottom {
             display: flex;
-            width: 30%;
+            width: 40%;
             align-items: center;
+            font-size: 14px;
 
             & .order-default-amount {
               width: 44%;
               color: $color_label;
               font-weight: bold;
+
             }
 
             & .order-count {
@@ -1558,6 +1578,8 @@ h3 > a {
 
             & .order-detail-top {
               width: 100%;
+              display: flex;
+              justify-content: space-around;
 
               & .order-image {
                 width: 20%;
@@ -1623,14 +1645,14 @@ h3 > a {
   }
 
   & .orders-item-date {
-    width: 75%;
+    width: 70%;
     text-align: left;
   }
 
   & .orders-item-sum {
     color: $color_secondary;
     font-weight: bold;
-    width: 10%;
+    width: 15%;
   }
 
   @media screen and (max-width: 768px) {
@@ -1952,6 +1974,7 @@ h3 > a {
   color: white;
   padding: 10px 10px 10px 10px;
   width: 40%;
+  min-width: 240px;
   text-transform: uppercase;
   vertical-align: middle;
   outline: none;
@@ -2957,6 +2980,10 @@ div {
     font-size: .7rem;
     padding-right: 5px;
   }
+}
+
+.hr-bottom {
+  border-bottom: 1px solid $color_lite;
 }
 
 .catalog-item {
