--- a/src/index_.scss
+++ b/src/index_.scss
@@ -37,6 +37,7 @@ $btn_default_color: #229DD2;
 .main-catalog-list {
     display: flex;
     flex-flow: row wrap;
+    margin-bottom: 100px;
 
     &__item {
         cursor: pointer;
@@ -90,18 +91,51 @@ $btn_default_color: #229DD2;
 
 .custom-carousel {
     width: 100%;
-    padding: 30px 0;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    margin-bottom: 80px;
+    position: relative;
 
     .carousel__title {
+        position: relative;
         text-align: center;
         text-transform: uppercase;
         color: #1d7595;
         font-size: 30px;
         font-weight: bold;
+        margin-bottom: 25px;
+
+        &-icon {
+            position: absolute;
+            top: 25%;
+            left: -35px;
+            width: 25px;
+            height: 25px;
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
+            background-size: contain;
+            
+            
+
+            &_stock {
+                background-image: url('./images/icons/carousel/carousel__title-icon-stock.png');
+                
+            }
+            &_new {
+                background-image: url('./images/icons/carousel/carousel__title-icon-star.png');
+            
+            }
+            &_produced {
+                background-image: url('./images/icons/carousel/carousel__title-icon-factory.png');
+            
+            }
+            &_season {
+                background-image: url('./images/icons/carousel/carousel__title-icon-leaf.png');
+            
+            }
+        }
 
 
     }
@@ -113,21 +147,28 @@ $btn_default_color: #229DD2;
         flex-flow: row nowrap;
         justify-content: center;
         padding-left: 10px;
-        padding: 10px 0;
+        padding: 10px 20px 10px 45px;
         overflow: hidden;
         
-        
+        .product-card {
+            height: 400px;
+
+            &_tile {
+                min-width: 240px;
+            }
+        }
     }
 
     .carousel__control_prev, .carousel__control_next {
         cursor: pointer;
         position: absolute;
-        top: 40%;
+        top: 50%;
         width: 30px;
         height: 20px;
         background-repeat: no-repeat;
         background-size: contain;
         background-position: 50% 50%;
+        z-index: 50;
         
     }
     .carousel__control_prev {
@@ -397,6 +438,7 @@ $btn_default_color: #229DD2;
     display: flex;
     min-width: 125px;
     max-height: 400px;
+    padding-bottom: 20px;
     margin-bottom: 25px;
     border: 1px solid #afafaf83;
     border-radius: 10px;
@@ -475,8 +517,12 @@ $btn_default_color: #229DD2;
                 background-image: url('./images/icons/product_card/product-card__icon-star.png');
                 background-color: #EFA44B;
             }
-            &_self {
+            &_produced {
                 background-image: url('./images/icons/product_card/product-card__icon-factory.png');
+                background-color: #229DD2;
+            }
+            &_season {
+                background-image: url('./images/icons/product_card/product-card__icon-leaf.png');
                 background-color: #229DD2;
             }
         }
@@ -487,8 +533,7 @@ $btn_default_color: #229DD2;
 
     &__image-wrapper {
         overflow: hidden;
-        padding-top: 30px;
-        
+        padding-top: 35px;
         
 
         .product-card_list & {
@@ -496,15 +541,15 @@ $btn_default_color: #229DD2;
             min-width: 100px;
         }
         .product-card_tile & {
-            max-height: 150px;
-            height: 50%;
+            max-height: 200px;
+            height: 60%;
         }
     }
     
     &__image {
         object-fit: contain;
-        width: 80%;
-        height: 70%;
+        width: 90%;
+        height: 100%;
         
     }
 
@@ -1425,6 +1470,40 @@ $btn_default_color: #229DD2;
         padding: 5px 30px;
     }
 
+    .custom-carousel {
+        
+
+        .carousel__title {
+            font-size: 20px;
+
+            &-icon {
+                display: none;
+            }
+        }
+        
+        .carousel__control_prev, .carousel__control_next {
+            width: 20px;
+        }
+        .carousel__control_prev {
+            left: -5px;
+        }
+        .carousel__control_next {
+            right: -5px;
+        }
+
+        .carousel-body {
+            padding: 0 25px 0 35px;
+            width: 100%;
+
+            .product-card {
+                &_tile {
+                    height: 320px;
+                    width: 240px;
+                }
+                
+            }
+        }
+    }
 
     .main-catalog-list {
         
