--- a/src/index_.scss
+++ b/src/index_.scss
@@ -18,6 +18,67 @@ $btn_default_color: #229DD2;
 }
 
 
+.banner {
+    width: 95%;
+    height: 23vw;
+
+    &.banner-bg {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+
+
+        &_promo1 {
+            background-image: url('./images/banners/promo_1.png');
+        }
+        &_promo2 {
+            
+        }
+        &_promo3 {
+            
+        }
+        &_promo4 {
+            
+        }
+        &_promo5 {
+            
+        }
+    }
+
+    &-body {
+        width: 100%;
+        height: 100%;
+        padding-top: 12%;
+        padding-left: 8%;
+        
+        
+
+        &__text-wrap {
+            
+            display: flex;
+            flex-flow: column nowrap;
+            text-align: left;
+        }
+
+        &__text {
+            &_small {
+                color: #ffffff;
+                font-size: 1.5em;
+                font-weight: bold;
+
+            }
+            &_big {
+                color: #ffffff;
+                font-size: 2.5em;
+                line-height: 40px;
+                font-weight: bold;
+                text-transform: uppercase;
+            }
+        }
+
+    }
+}
+
 .content-wrapper {
     padding: 0 3% 60px 30px;
     width: 100%;
@@ -146,7 +207,6 @@ $btn_default_color: #229DD2;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
-        padding-left: 10px;
         padding: 10px 20px 10px 45px;
         overflow: hidden;
         
@@ -195,6 +255,30 @@ $btn_default_color: #229DD2;
     .carousel__control_next {
         right: 0;
         background-image: url('./images/carousel/next.png');
+    }
+}
+
+.index-page {
+
+    .custom-carousel {
+        margin-bottom: 0;
+        padding-bottom: 0;
+        width: 100%;
+
+        .carousel__title {
+            align-self: flex-start;
+            margin-left: 35px;
+        }
+
+        .carousel-body {
+            width: 95%;
+            padding: 10px 0;
+            justify-content: flex-start;
+
+            .product-card_tile {
+                margin-right: 17px;
+            }
+        }
     }
 }
 
@@ -1441,7 +1525,17 @@ $btn_default_color: #229DD2;
 }
 
 
-
+@media screen and(max-width: 1700px) {
+    .index-page {
+        .custom-carousel {
+            width: 95%;
+            .carousel-body {
+                justify-content: center;
+                padding-left: 10px;
+            }           
+        }
+    }
+}
 @media screen and(max-width: 1140px) {
     .content-wrapper {
         padding-right: 20px;
@@ -1472,6 +1566,25 @@ $btn_default_color: #229DD2;
 
 
 @media screen and(max-width: 768px) {
+
+    .index-page {
+        .custom-carousel {
+            width: 100%;
+
+            .carousel__title {
+                align-self: center;
+                margin-left: 0;
+            }
+            .carousel-body {
+                .product-card_tile {
+                    margin-right: 0;
+                }
+            }
+            
+        }
+    }
+
+
     .content-wrapper {
         max-width: 100%;
         padding: 0 3% 60px 3%;
